CREATE TABLE Component (Part_ID char(10) NOT NULL, PRIMARY KEY (Part_ID));
CREATE TABLE Costumer (VAT varchar2(20) NOT NULL, Name varchar2(255) NOT NULL, Address varchar2(60) NOT NULL, "Zip-Code" varchar2(10) NOT NULL, City varchar2(60) NOT NULL, Country varchar2(60) NOT NULL, Email varchar2(255) NOT NULL, Phone number(20) NOT NULL, PRIMARY KEY (VAT));
CREATE TABLE Intermediate_Product (Part_ID char(10) NOT NULL, PRIMARY KEY (Part_ID));
CREATE TABLE Operation (Operation_ID number(10) NOT NULL, Designation varchar2(100) NOT NULL, NextOperation_ID number(10), Product_ID char(10) NOT NULL, PRIMARY KEY (Operation_ID));
CREATE TABLE Operation_Input (Part_ID char(10) NOT NULL, Operation_ID number(10) NOT NULL, Quantity double precision NOT NULL, PRIMARY KEY (Part_ID, Operation_ID));
CREATE TABLE Operation_Output (Part_ID char(10) NOT NULL, Operation_ID number(10) NOT NULL, Quantity double precision NOT NULL, PRIMARY KEY (Part_ID, Operation_ID));
CREATE TABLE Operation_Type_Workstation (OperationOperation_ID number(10) NOT NULL, WorkstationType_ID char(5) NOT NULL, PRIMARY KEY (OperationOperation_ID, WorkstationType_ID));
CREATE TABLE "Order" (Order_ID varchar2(255) NOT NULL, OrderDate date NOT NULL, DeliveryDate date NOT NULL, CostumerVAT varchar2(20) NOT NULL, PRIMARY KEY (Order_ID));
CREATE TABLE Part (Part_ID char(10) NOT NULL, PRIMARY KEY (Part_ID));
CREATE TABLE Product (Part_ID char(10) NOT NULL, Name varchar2(60) NOT NULL, Product_FamilyFamily_ID varchar2(60) NOT NULL, PRIMARY KEY (Part_ID));
CREATE TABLE Product_Family (Family_ID varchar2(60) NOT NULL, Name varchar2(100) NOT NULL, PRIMARY KEY (Family_ID));
CREATE TABLE Production_Line (Product_ID char(10) NOT NULL, Order_ID varchar2(255) NOT NULL, quantity number(10) NOT NULL, PRIMARY KEY (Product_ID, Order_ID));
CREATE TABLE Raw_Material (Part_ID char(10) NOT NULL, PRIMARY KEY (Part_ID));
CREATE TABLE Type_Workstation (WorkstationType_ID char(5) NOT NULL, Designation varchar2(60) NOT NULL, PRIMARY KEY (WorkstationType_ID));
CREATE TABLE Workstation (Workstation_ID number(4) NOT NULL, Name varchar2(60) NOT NULL, Description varchar2(100) NOT NULL, WorkstationType_ID char(5) NOT NULL, PRIMARY KEY (Workstation_ID));
ALTER TABLE Product ADD CONSTRAINT FKProduct42868 FOREIGN KEY (Product_FamilyFamily_ID) REFERENCES Product_Family (Family_ID);
ALTER TABLE Production_Line ADD CONSTRAINT FKProduction984405 FOREIGN KEY (Product_ID) REFERENCES Product (Part_ID);
ALTER TABLE Production_Line ADD CONSTRAINT FKProduction29800 FOREIGN KEY (Order_ID) REFERENCES "Order" (Order_ID);
ALTER TABLE "Order" ADD CONSTRAINT FKOrder416670 FOREIGN KEY (CostumerVAT) REFERENCES Costumer (VAT);
ALTER TABLE Workstation ADD CONSTRAINT FKWorkstatio115580 FOREIGN KEY (WorkstationType_ID) REFERENCES Type_Workstation (WorkstationType_ID);
ALTER TABLE Operation_Type_Workstation ADD CONSTRAINT FKOperation_470077 FOREIGN KEY (OperationOperation_ID) REFERENCES Operation (Operation_ID);
ALTER TABLE Operation_Type_Workstation ADD CONSTRAINT FKOperation_446474 FOREIGN KEY (WorkstationType_ID) REFERENCES Type_Workstation (WorkstationType_ID);
ALTER TABLE Raw_Material ADD CONSTRAINT FKRaw_Materi885917 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
ALTER TABLE Component ADD CONSTRAINT FKComponent10459 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
ALTER TABLE Operation_Input ADD CONSTRAINT FKOperation_316904 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
ALTER TABLE Intermediate_Product ADD CONSTRAINT FKIntermedia245049 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
ALTER TABLE Operation_Input ADD CONSTRAINT FKOperation_862600 FOREIGN KEY (Operation_ID) REFERENCES Operation (Operation_ID);
ALTER TABLE Operation_Output ADD CONSTRAINT FKOperation_29794 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
ALTER TABLE Operation_Output ADD CONSTRAINT FKOperation_762291 FOREIGN KEY (Operation_ID) REFERENCES Operation (Operation_ID);
ALTER TABLE Operation ADD CONSTRAINT FKOperation774989 FOREIGN KEY (NextOperation_ID) REFERENCES Operation (Operation_ID);
ALTER TABLE Operation ADD CONSTRAINT FKOperation98050 FOREIGN KEY (Product_ID) REFERENCES Product (Part_ID);
ALTER TABLE Product ADD CONSTRAINT FKProduct891385 FOREIGN KEY (Part_ID) REFERENCES Part (Part_ID);
