@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

class Simulator {
    - operationQueues : MapLinked<Operation, Product, String>
    - products : List<Product>
    - w : WorkstationsPerOperation
    - p : ProductPriorityLine
    - productMachineFlows : Map<String, List<String>>
    - totalProductionTime : double
    - productTimes : Map<String, Double>
    + runWithoutPriority() : void
    + runWithPriority() : void
    + createOperationQueues(products : List<Product>) : void
    + processItems() : void
    + printTotalProductionTime() : void
    + printProductionTimePerProduct() : void
    + printMachineDependencies() : void
    + printAnalysis() : void
    + getOperationQueues() : MapLinked<Operation, Product, String>
    + getProducts() : List<Product>
    + getProductionTimePerProduct() : List<Double>
    + getTotalProductionTime() : double
}

class MapLinked<K, V, S> {
    + newItem(key : K, value : V) : void
    + removeAll() : void
    + getByKey(key : K) : LinkedList<V>
}

class WorkstationsPerOperation {
    + findBestMachineForOperation(operation : Operation) : Workstation
    + getWorkstationsAscendingByPercentage() : List<Workstation>
}

class ProductPriorityLine {
    + getAllProducts() : List<Product>
    + getProductsByPriority(priority : PriorityOrder) : List<Product>
}

class MachineFlowAnalyzer {
    + static addDependency(machineA : String, machineB : String) : void
    + static printMachineDependencies() : void
}

class Product {
    + getId() : String
    + getOperations() : List<Operation>
}

class Operation {
    + getId() : String
}

class Workstation {
    + getId() : String
    + getExecutiontimeTotal() : double
    + getOperationTimeTotal() : double
    + isAvailable() : boolean
    + processProduct(product : Product) : void
    + getTime() : double
}

Simulator --> MapLinked
Simulator --> WorkstationsPerOperation
Simulator --> ProductPriorityLine
Simulator ..> MachineFlowAnalyzer
Simulator --> Product
Simulator --> Operation
Simulator --> Workstation
ProductPriorityLine --> Product
WorkstationsPerOperation --> Workstation
Operation --> Workstation

@enduml
